# mokapot_coppice

./: .pre-commit-config.yaml  README.md  pyproject.toml
benchmarking/: .gitignore  README.md  benchmark.bash  benchmark.zsh  benchmark_agent.py  config.yml  hparam_tune.zsh  hparams_agent.py  requirements.txt  snakefile.smk  sweep_config.yml  sweep_lgbm_hparams.yml
benchmarking/data/: get_data.bash
hparam_tuning/: .gitignore
hparam_tuning/catboost/: hparam_tune.zsh  hparams_agent.py  requirements.txt  sweep_catboost_hparams.yml
hparam_tuning/lgbm/: hparam_tune.zsh  hparams_agent.py  sweep_lgbm_hparams.yml
mokapot_coppice/: __init__.py  models.py
tests/: test_cli.py
